# s3prism

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
docs/: s3_api_spec.md
src/: config.rs  lib.rs  main.rs
src/api/: chunked.rs  error.rs  mod.rs  router.rs  server.rs  state.rs  xml.rs
src/api/handlers/: bucket.rs  copy.rs  list.rs  mod.rs  multipart.rs  object.rs
src/backend/: client.rs  dns.rs  fanout.rs  mod.rs  pool.rs  signing.rs
src/balancer/: dns.rs  host_group.rs  mod.rs  picker.rs  strategy.rs
src/coordination/: config_sync.rs  mod.rs  valkey.rs
src/erasure_coding/: decoder.rs  encoder.rs  mod.rs  streaming.rs
src/health/: checker.rs  circuit.rs  mod.rs
src/metadata/: index.rs  mod.rs  models.rs  purge_queue.rs  rocksdb_backend.rs  store.rs  sync.rs
src/metrics/: mod.rs
src/ratelimit/: distributed.rs  limiter.rs  mod.rs  scopes.rs
src/reconciler/: mod.rs  pending.rs  repair.rs  scanner.rs
src/retry/: circuit.rs  mod.rs  policy.rs
src/stats/: aggregator.rs  mod.rs  query.rs  retention.rs  transfer.rs
src/web/: api.rs  auth.rs  mod.rs  state.rs  websocket.rs
src/web/assets/: index.html
tests/: mgmt_api.rs  s3_api.rs
tests/helpers/: fake_s3.rs  mod.rs
