[package]
name = "s3prism"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.8.2"
argon2 = "0.5.3"
aws-credential-types = "1.2.14"
aws-sigv4 = "1.4.2"
axum = { version = "0.8.8", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
envconfig = "0.11.1"
hex = "0.4.3"
hmac = "0.12.1"
hyper = { version = "1.8.1", features = ["full"] }
leptos = "0.8.17"
md-5 = "0.10.6"
mime_guess = "2.0.5"
notify = "8.2.0"
prometheus = "0.14.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.0"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
reed-solomon-simd = "3.1.0"
reqwest = { version = "0.13.2", features = ["stream", "default-tls", "json"] }
rocksdb = "0.24.0"
rust-embed = "8.11.0"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
toml = "1.0.6"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "normalize-path"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.22.0", features = ["v4"] }
webpki-roots = "1.0.6"
zstd = "0.13.3"

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.26.0"
